<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.llamaquill</groupId>
  <artifactId>LlamaQuill</artifactId>
  <version>0.1.0</version>
  <name>LlamaQuill</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>25</maven.compiler.release>

    <javafx.version>25.0.1</javafx.version>
    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>

    <junit.jupiter.version>5.10.3</junit.jupiter.version>

    <!-- App identity -->
    <app.name>LlamaQuill</app.name>
    <app.vendor>com.llamaquill</app.vendor>

    <!-- Your module + main class (matches your existing javafx plugin mainClass) -->
    <app.module>com.llamaquill</app.module>
    <app.mainClass>com.llamaquill.App</app.mainClass>

    <!-- Where we stage jars for jpackage -->
    <staging.dir>${project.build.directory}/mods</staging.dir>

    <!-- jpackage plugin version -->
    <jpackage.plugin.version>1.7.3</jpackage.plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.46.1.0</version>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20240303</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Java compilation -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>

      <!-- Dev run -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.maven.plugin.version}</version>
        <configuration>
          <mainClass>${app.module}/${app.mainClass}</mainClass>
        </configuration>
      </plugin>

      <!-- Tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>

      <!-- Stage your app jar into target/mods -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <outputDirectory>${staging.dir}</outputDirectory>
        </configuration>
      </plugin>

      <!-- Stage runtime dependencies into target/mods -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.7.1</version>
        <executions>
          <execution>
            <id>copy-runtime-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>runtime</includeScope>
              <outputDirectory>${staging.dir}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Package using jpackage -->
      <plugin>
        <groupId>org.panteleyev</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <version>${jpackage.plugin.version}</version>
        <configuration>
          <name>${app.name}</name>
          <vendor>${app.vendor}</vendor>
          <appVersion>${project.version}</appVersion>

          <!-- Use full JDK as runtime image for maximum compatibility first -->
          <runtimeImage>${java.home}</runtimeImage>

          <!-- Modular entry point -->
          <module>${app.module}/${app.mainClass}</module>

          <!-- Where the plugin should look for your jar + deps -->
          <modulePaths>
            <modulePath>${staging.dir}</modulePath>
          </modulePaths>

          <destination>${project.build.directory}/dist</destination>
          <removeDestination>true</removeDestination>
          <type>APP_IMAGE</type>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
